# cg2015

./: .gitignore  CMakeLists.txt  Makefile  README.md  camera.cpp  camera.hpp  keyboard.hpp  main  main.cpp  math.hpp  object.cpp  object.hpp  skybox.cpp  skybox.hpp  structs.hpp  texture.cpp  world.cpp  world.hpp
include/: Sphere.hpp  camera.hpp  main.hpp  object.hpp  particle.hpp  sea.hpp  shader.hpp  skybox.hpp  sphere.hpp  structs.hpp  texture.hpp  world.hpp
report/: report.tex
shaders/: lens_frag.glsl  lens_vert.glsl  sea_frag.glsl  sea_frag.glsl2  sea_vert.glsl  sea_vert.glsl2  sun_frag.glsl
src/: Sphere.cpp  camera.cpp  main.cpp  object.cpp  particle.cpp  sea.cpp  shader.cpp  skybox.cpp  sphere.cpp  texture.cpp  world.cpp
